-- PostgreSQL 17. Estruturas técnicas ficam fora do esquema dimensional dw.
CREATE SCHEMA IF NOT EXISTS dw;
CREATE SCHEMA IF NOT EXISTS etl;

CREATE TABLE IF NOT EXISTS dw.dim_data (
  data_sk integer PRIMARY KEY,
  data date UNIQUE NOT NULL,
  ano smallint NOT NULL,
  trimestre smallint NOT NULL CHECK (trimestre BETWEEN 1 AND 4),
  mes smallint NOT NULL CHECK (mes BETWEEN 1 AND 12),
  dia smallint NOT NULL CHECK (dia BETWEEN 1 AND 31),
  dia_semana_iso smallint NOT NULL CHECK (dia_semana_iso BETWEEN 1 AND 7),
  inicio_mes date NOT NULL
);
CREATE TABLE IF NOT EXISTS dw.dim_produto (
  produto_sk bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  produto_id integer UNIQUE NOT NULL,
  nome text NOT NULL,
  numero_produto text NOT NULL,
  cor text,
  subcategoria text NOT NULL,
  categoria text NOT NULL,
  ativo_origem boolean NOT NULL DEFAULT true,
  atualizado_em timestamptz NOT NULL DEFAULT now()
);
CREATE TABLE IF NOT EXISTS dw.dim_cliente (
  cliente_sk bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  cliente_id integer UNIQUE NOT NULL,
  nome text NOT NULL,
  tipo text NOT NULL CHECK (tipo IN ('Loja','Pessoa','Não informado')),
  ativo_origem boolean NOT NULL DEFAULT true,
  atualizado_em timestamptz NOT NULL DEFAULT now()
);
CREATE TABLE IF NOT EXISTS dw.dim_territorio (
  territorio_sk bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  territorio_id integer UNIQUE NOT NULL,
  nome text NOT NULL,
  pais_codigo text NOT NULL,
  grupo text NOT NULL,
  ativo_origem boolean NOT NULL DEFAULT true,
  atualizado_em timestamptz NOT NULL DEFAULT now()
);
CREATE TABLE IF NOT EXISTS dw.dim_vendedor (
  vendedor_sk bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  vendedor_id integer UNIQUE NOT NULL,
  nome text NOT NULL,
  ativo_origem boolean NOT NULL DEFAULT true,
  atualizado_em timestamptz NOT NULL DEFAULT now()
);
CREATE TABLE IF NOT EXISTS dw.dim_canal (
  canal_sk smallint PRIMARY KEY CHECK (canal_sk IN (0,1)),
  nome text UNIQUE NOT NULL
);
INSERT INTO dw.dim_canal VALUES (0,'Revendedor'),(1,'Online') ON CONFLICT DO NOTHING;
-- SK 0 representa ausência permitida no OLTP, nunca erro silencioso de lookup.
INSERT INTO dw.dim_territorio(territorio_sk,territorio_id,nome,pais_codigo,grupo)
VALUES(0,0,'Não informado','N/I','Não informado') ON CONFLICT DO NOTHING;
INSERT INTO dw.dim_vendedor(vendedor_sk,vendedor_id,nome)
VALUES(0,0,'Sem vendedor associado') ON CONFLICT DO NOTHING;

CREATE TABLE IF NOT EXISTS dw.fato_venda (
  pedido_id integer NOT NULL,
  item_id integer NOT NULL,
  data_pedido_sk integer NOT NULL REFERENCES dw.dim_data(data_sk),
  data_vencimento_sk integer NOT NULL REFERENCES dw.dim_data(data_sk),
  data_envio_sk integer REFERENCES dw.dim_data(data_sk),
  produto_sk bigint NOT NULL REFERENCES dw.dim_produto(produto_sk),
  cliente_sk bigint NOT NULL REFERENCES dw.dim_cliente(cliente_sk),
  territorio_sk bigint NOT NULL REFERENCES dw.dim_territorio(territorio_sk),
  vendedor_sk bigint NOT NULL REFERENCES dw.dim_vendedor(vendedor_sk),
  canal_sk smallint NOT NULL REFERENCES dw.dim_canal(canal_sk),
  status smallint NOT NULL CHECK (status BETWEEN 1 AND 6),
  quantidade integer NOT NULL CHECK (quantidade > 0),
  preco_unitario numeric(19,4) NOT NULL CHECK (preco_unitario >= 0),
  taxa_desconto numeric(9,4) NOT NULL CHECK (taxa_desconto BETWEEN 0 AND 1),
  receita_liquida numeric(28,8) NOT NULL CHECK (receita_liquida >= 0),
  receita_bruta numeric(28,8) GENERATED ALWAYS AS (quantidade * preco_unitario) STORED,
  valor_desconto numeric(28,8) GENERATED ALWAYS AS (quantidade * preco_unitario - receita_liquida) STORED,
  versao_origem bigint NOT NULL,
  carregado_em timestamptz NOT NULL DEFAULT now(),
  PRIMARY KEY (pedido_id,item_id),
  CHECK (abs(receita_liquida - quantidade*preco_unitario*(1-taxa_desconto)) <= 0.000001)
);
CREATE INDEX IF NOT EXISTS ix_venda_data ON dw.fato_venda(data_pedido_sk);
CREATE INDEX IF NOT EXISTS ix_venda_produto ON dw.fato_venda(produto_sk);
CREATE INDEX IF NOT EXISTS ix_venda_cliente ON dw.fato_venda(cliente_sk);
CREATE INDEX IF NOT EXISTS ix_venda_territorio ON dw.fato_venda(territorio_sk);
CREATE INDEX IF NOT EXISTS ix_venda_vendedor ON dw.fato_venda(vendedor_sk);
CREATE INDEX IF NOT EXISTS ix_venda_envio ON dw.fato_venda(data_envio_sk);
CREATE INDEX IF NOT EXISTS ix_venda_vencimento ON dw.fato_venda(data_vencimento_sk);

-- Regra comercial única: vendas expedidas (Status 5), atribuídas à data do pedido.
CREATE OR REPLACE VIEW dw.v_vendas AS
SELECT f.*, d.data AS data_pedido, d.inicio_mes,
       e.data AS data_envio, v.data AS data_vencimento
FROM dw.fato_venda f
JOIN dw.dim_data d ON d.data_sk=f.data_pedido_sk
JOIN dw.dim_data v ON v.data_sk=f.data_vencimento_sk
LEFT JOIN dw.dim_data e ON e.data_sk=f.data_envio_sk
WHERE f.status=5;

CREATE TABLE IF NOT EXISTS etl.controle (
  pipeline text PRIMARY KEY,
  versao bigint NOT NULL,
  identidade_origem text NOT NULL,
  atualizado_em timestamptz NOT NULL DEFAULT now()
);
CREATE TABLE IF NOT EXISTS etl.execucao (
  execucao_id uuid PRIMARY KEY,
  inicio timestamptz NOT NULL DEFAULT now(),
  fim timestamptz,
  status text NOT NULL CHECK (status IN ('running','success','failed')),
  modo text NOT NULL,
  versao_anterior bigint,
  versao_nova bigint,
  estatisticas jsonb,
  erro text
);
COMMENT ON TABLE dw.fato_venda IS 'Uma linha por item de pedido. Estado atual; medidas comerciais sem frete e tributos.';
COMMENT ON VIEW dw.v_vendas IS 'Somente pedidos expedidos; reconhecimento comercial didático pela data do pedido, não receita contábil.';
COMMENT ON TABLE etl.controle IS 'Checkpoint confirmado na mesma transação PostgreSQL dos dados.';
